manually define post layout

--- a/_posts/2021-12-28-biol490.md
+++ b/_posts/2021-12-28-biol490.md
@@ -1,6 +1,8 @@
 ---
 permalink: /biol490/
+author_profile: true
 title: "Using Compressive Sensing to Recover Lotka-Volterra Dynamics"
+layout: single
 categories:
   - Math
   - Ecology
